# Assignment2_rt

./: .gitignore  CMakeLists.txt  NewTerminal.sh  README.md  package.xml
assignment2_rt/launch/: launch.py
assignment2_rt/scripts/: AskAverage.py  AvarageVelocity.py  Mobile_controller.py
assignment2_rt/src/: ChangeThreshold.cpp
bme_gazebo_sensors-main/launch/: spawn_robot.launch.py
launch/: launch.py
scripts/: AskAverage.py  AvarageVelocity.py  Mobile_controller.py
src/: Distance.cpp
turtlesim_custom_msgs/: CMakeLists.txt  package.xml
turtlesim_custom_msgs/msg/: DistanceAngle.msg
turtlesim_custom_msgs/srv/: SetThreshold.srv  VelocityComponents.srv
