cmake_minimum_required(VERSION 3.8)
project(assignment2_rt)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(turtlesim_custom_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_executable(distance src/Distance.cpp)
add_executable(change_threshold src/ChangeThreshold.cpp)
ament_target_dependencies(distance rclcpp turtlesim_custom_msgs std_msgs sensor_msgs)
ament_target_dependencies(change_threshold rclcpp turtlesim_custom_msgs std_msgs sensor_msgs)

install(TARGETS
  distance
  change_threshold
  DESTINATION lib/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/Mobile_controller.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME mobileController
)

install(PROGRAMS
  scripts/AvarageVelocity.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME averageVelocity
)

install(PROGRAMS
  scripts/AskAverage.py
  DESTINATION lib/${PROJECT_NAME}
  RENAME askAverage
)

install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
